--- a/notebooks/training-model.ipynb
+++ b/notebooks/training-model.ipynb
@@ -36,7 +36,7 @@
         "id": "cPI5E5y0pujD"
       },
       "source": [
-        "# Custom Training StyleGan2-ADA"
+        "# StyleGan2-ADA Training"
       ]
     },
     {
@@ -45,7 +45,9 @@
         "id": "SI_i1MwgpzOD"
       },
       "source": [
-        "StyleGAN2-ADA only work with Tensorflow 1. Run the next cell before anything else to make sure we’re using TF1 and not TF2."
+        "StyleGAN2-ADA only work with Tensorflow 1 !\n",
+        "\n",
+        "Run the next cell before anything else to make sure we’re using TF1 and not TF2."
       ]
     },
     {
@@ -78,8 +80,6 @@
       "source": [
         "## Install Repo to Google Drive\n",
         "\n",
-        "Colab is a little funky with training. I’ve found the best way to do this is to install the repo directly into your Google Drive folder.\n",
-        "\n",
         "First, mount your Drive to the Colab notebook: "
       ]
     },
@@ -111,11 +111,11 @@
       },
       "source": [
         "import os\n",
-        "if os.path.isdir(\"/content/drive/My Drive/colab-sg2-ada\"):\n",
-        "    %cd \"/content/drive/My Drive/colab-sg2-ada/stylegan2-ada\"\n",
+        "if os.path.isdir(\"/content/drive/MyDrive/colab-sg2-ada\"):\n",
+        "    %cd \"/content/drive/MyDrive/colab-sg2-ada/stylegan2-ada\"\n",
         "else:\n",
         "    #install script\n",
-        "    %cd \"/content/drive/My Drive/\"\n",
+        "    %cd \"/content/drive/MyDrive/\"\n",
         "    !mkdir colab-sg2-ada\n",
         "    %cd colab-sg2-ada\n",
         "    !git clone https://github.com/dvschultz/stylegan2-ada\n",
@@ -132,7 +132,7 @@
         "id": "G7oj_kBaemol"
       },
       "source": [
-        "%cd \"/content/drive/My Drive/colab-sg2-ada/stylegan2-ada\"\n",
+        "%cd \"/content/drive/MyDrive/colab-sg2-ada/stylegan2-ada\"\n",
         "!git config --global user.name \"test\"\n",
         "!git config --global user.email \"test@test.com\"\n",
         "!git fetch origin\n",
@@ -249,7 +249,7 @@
         "#\n",
         "# running it for the first time? set it to ffhq(+resolution)\n",
         "# resuming? get the path to your latest .pkl file and use that\n",
-        "resume_from = \"/content/drive/My\\ Drive/colab-sg2-ada2/stylegan2-ada/results/00008-dante1024-mirror-mirrory-11gb-gpu-bg-resumecustom/network-snapshot-000160.pkl\"\n",
+        "resume_from = \"/content/drive/MyDrive/colab-sg2-ada2/stylegan2-ada/results/00008-dante1024-mirror-mirrory-11gb-gpu-bg-resumecustom/network-snapshot-000160.pkl\"\n",
         "\n",
         "#don't edit this unless you know what you're doing :)\n",
         "!python train.py --outdir ./results --snap={snapshot_count} --cfg=11gb-gpu --data=./datasets/{dataset_name} --augpipe={augs} --mirror={mirrored} --mirrory={mirroredY} --metrics={metric_list} --resume={resume_from} --augpipe=\"bg\""
